Refactored Vaccine enum with optionals